# sql-helper

./: .editorconfig  .gitignore  .releaserc.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  release.conf.js  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  publish.yaml  rust-linter.yml  super-linter.yaml
src/: ansi.rs  common.rs  lib.rs
src/ansi/: ast.rs  data_type.rs  data_type_base.rs  data_type_structures.rs  parser.rs
src/ansi/ast/: common.rs  create_schema.rs  create_table.rs  data_types.rs  drop_schema.rs  drop_table.rs
src/ansi/data_type_structures/: ast.rs  parser.rs
src/ansi/parser/: common.rs  create_schema.rs  create_table.rs  data_types.rs  drop_schema.rs  drop_table.rs
src/ansi/statements/: create_table.rs
src/ast/: data_type.rs
src/common/: ast.rs  parsers.rs  tokens.rs
tests/: ansii_create_schema.rs  ansii_create_table.rs  ansii_drop_schema.rs  ansii_drop_table.rs
tests/common/: mod.rs
