[package]
name = "sql-helper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
test-case = "2"
derive_builder = "0.11"
spectral = "0.6"
