[package]
name = "sql-helper"
description = "ANSI SQL parser"
version = "1.0.0"
authors = ["Augusto Fotino <augusto.fotino@hotmail.com>"]
documentation = "https://augustos-organization.gitbook.io/sql-helper/"
repository = "https://github.com/AugustoFKL/sql-helper/"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ansi", "sql", "lexer", "parser"]
categories = ["development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sql_helper"
path = "src/lib.rs"

[dependencies]
nom = "7"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
test-case = "2"
derive_builder = "0.11"
spectral = "0.6"
